--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,8 +20,7 @@ a,
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
-
-@media (min-width: 1024px) {
+/*@media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
@@ -31,4 +30,4 @@ a,
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-}
+} */
